@@ -1,4 +1,10 @@
 2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* server-src/driver.c: Set TAPER_STATE_TAPE_STARTED on NEW-TAPE
+
+2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* server-src/driver.c: Send dump to first storage
+
+2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Status.pm: Add vaulting information
 	* server-src/amstatus.pl: Print vaulting information
 	* installcheck/success-dumper-taper.pl: Fix for vaulting information
